# jury-protocol

./: .gitignore  ARCHITECTURE.md  DEMO_FLOW.md  README.md  code_digest.json  decision-room.md  demo-script-pitch.md  demo-script-tech.md  deploy-retry.sh  deployment-url.txt  design-system.md  gen_voiceover.py  go-to-market.md  hackathon-landscape.md  hackathon-requirements.md  idea-candidates.json  idea-candidates.md  judge-packet.md  judge-sponsor-intelligence.md  previous-winners-analysis.md  quality-review.md  spike-result.md  spike.mjs  story.json  visual_report.json  why-we-win.md  winning-thesis.md  wireframe.md
archive-prior-rounds/: judge-packet.md  spike-result.md  spike-target.md
archive-prior-rounds/spike-vrf/: package-lock.json  package.json
colosseum-jury/: decision-room.md
hackathon_review/planning/: hackathon_review.json  hackathon_review_packet.json
jury/: decision-room.md
jury-app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
jury-app/src/: App.tsx  main.tsx
jury-app/src/lib/: idl.json  program.ts  useProgram.ts
jury-app/src/pages/: DisputeApp.tsx  DisputeView.tsx  Landing.tsx
jury-program/: Anchor.toml  README.md  package-lock.json  package.json
jury-program/programs/example-escrow/: Cargo.toml
jury-program/programs/example-escrow/src/: lib.rs
jury-program/programs/jury-program/: Cargo.toml
jury-program/programs/jury-program/src/: lib.rs
jury-program/tests/: evidence-run.ts  g1-evidence-artifact.txt  jury-program.ts
screenshots/: visual_report.json
(+1 files in other folders)
