[package]
name = "example-escrow"
version = "0.1.0"
description = "Example: escrow service that embeds JURY dispute resolution via CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_escrow"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1" }
jury-program = { path = "../jury-program", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
