[package]
name = "jury-program"
version = "0.1.0"
description = "On-chain dispute resolution with VRF-backed jury selection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jury_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
orao-solana-vrf = { version = ">=0.6", features = ["cpi"], default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
